[shenker/snakenbake] Draft of manifold chip wafer.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/200203 Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/200203 Single-input Basilisk.ipynb
@@ -197,8 +197,9 @@
     "            feeding_channel_height, manifold_width\n",
     "        )\n",
     "        q = ladder_flow_rates(R_snake, R_left, R_right)\n",
+    "        R = ((1 - np.cumsum(q))[:-1] * R_left).sum() + q[-1] * R_snake[-1]\n",
     "        results.append(\n",
-    "            {\"R_snake\": R_snake, \"R_left\": R_left, \"R_right\": R_right, \"q\": q}\n",
+    "            {\"R_snake\": R_snake, \"R_left\": R_left, \"R_right\": R_right, \"q\": q, \"R\": R}\n",
     "        )\n",
     "    return results\n",
     "\n",
@@ -252,11 +253,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## S8 chip resistance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "feeding_channel_height = 75  # * u.um\n",
+    "split = metadata[\"Basilisk S8 FC80 L35 W1.4 TS2.1\"][\"split\"]\n",
+    "lane_length = metadata[\"Basilisk S8 FC80 L35 W1.4 TS2.1\"][\"lane_length\"]\n",
+    "feeding_channel_width = metadata[\"Basilisk S8 FC80 L35 W1.4 TS2.1\"][\n",
+    "    \"feeding_channel_width\"\n",
+    "]\n",
+    "R = split * lane_length * resistance(feeding_channel_height, feeding_channel_width)\n",
+    "R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feeding_channel_height = 75  # * u.um\n",
+    "split = metadata[\"Basilisk S8 FC40 L35 W1.4 TS1.1\"][\"split\"]\n",
+    "lane_length = metadata[\"Basilisk S8 FC40 L35 W1.4 TS1.1\"][\"lane_length\"]\n",
+    "feeding_channel_width = metadata[\"Basilisk S8 FC40 L35 W1.4 TS1.1\"][\n",
+    "    \"feeding_channel_width\"\n",
+    "]\n",
+    "R = split * lane_length * resistance(feeding_channel_height, feeding_channel_width)\n",
+    "R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s3_metadata = {}\n",
+    "main_cell = s.chip(\n",
+    "    \"Big Snake\",\n",
+    "    s.snake,\n",
+    "    dims=np.array([23e3, 13e3]),\n",
+    "    split=3,\n",
+    "    gap_lanes=0,\n",
+    "    feeding_channel_width=45,\n",
+    "    trench_spacing=2,\n",
+    "    trench_gap=20,\n",
+    "    trench_width=1.5,\n",
+    "    port_margin=1.5e3,\n",
+    "    top_margin=1.2e3,\n",
+    "    bottom_margin=1.2e3,\n",
+    "    horizontal_margin=4e3,\n",
+    "    draw_trenches=False,\n",
+    "    metadata=s3_metadata,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_cell(main_cell)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s3_metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feeding_channel_height = 100  # * u.um\n",
+    "split = s3_metadata[\"Big Snake\"][\"split\"]\n",
+    "lane_length = s3_metadata[\"Big Snake\"][\"lane_length\"]\n",
+    "feeding_channel_width = s3_metadata[\"Big Snake\"][\"feeding_channel_width\"]\n",
+    "R = split * lane_length * resistance(feeding_channel_height, feeding_channel_width)\n",
+    "R"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -584,9 +675,9 @@
     "    \"gap_lanes\",\n",
     ")\n",
     "params = [\n",
+    "    dict(feeding_channel_width=80, trench_spacing=1.1, **base_params),\n",
     "    dict(feeding_channel_width=80, trench_spacing=2.1, **base_params),\n",
-    "    dict(feeding_channel_width=80, trench_spacing=2.1, **base_params),\n",
-    "    dict(feeding_channel_width=40, trench_spacing=1.1, **base_params),\n",
+    "    dict(feeding_channel_width=80, trench_spacing=3.1, **base_params),\n",
     "    dict(lanes_per_snake=3, trench_spacing=2.1, **manifold_params),\n",
     "    dict(lanes_per_snake=3, trench_spacing=2.1, **manifold_params),\n",
     "    dict(lanes_per_snake=5, trench_spacing=2.1, **manifold_params)\n",
