--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -23,7 +23,8 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "import snakenmake as s"
+    "import snakenbake as s\n",
+    "from geometry import Cell, Round"
    ]
   },
   {
@@ -94,16 +95,36 @@
     "    trench_spacing=2,\n",
     "    trench_gap=20,\n",
     "    trench_width=1.5,\n",
+    "    registration_marks=True,\n",
+    "    ticks=False,\n",
     "    port_margin=0.5e3,\n",
     "    top_margin=1.2e3,\n",
     "    bottom_margin=0.6e3,\n",
-    "    draw_trenches=False,\n",
+    "    draw_trenches=True,\n",
     "    metadata=metadata,\n",
     ")\n",
     "# print(metadata)\n",
-    "plot_cell(main_cell)\n",
+    "# plot_cell(main_cell)\n",
     "print(metadata[\"Big Snake\"][\"num_trenches\"])\n",
-    "# write_gds(main_cell, '200202manifold_test.gds')"
+    "write_gds(main_cell, \"200212manifold_test.gds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.log2(metadata[\"Big Snake\"][\"num_lanes\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.log2(metadata[\"Big Snake\"][\"trenches_per_set\"] / 20)"
    ]
   },
   {
@@ -197,8 +218,9 @@
     "            feeding_channel_height, manifold_width\n",
     "        )\n",
     "        q = ladder_flow_rates(R_snake, R_left, R_right)\n",
+    "        R = ((1 - np.cumsum(q))[:-1] * R_left).sum() + q[-1] * R_snake[-1]\n",
     "        results.append(\n",
-    "            {\"R_snake\": R_snake, \"R_left\": R_left, \"R_right\": R_right, \"q\": q}\n",
+    "            {\"R_snake\": R_snake, \"R_left\": R_left, \"R_right\": R_right, \"q\": q, \"R\": R}\n",
     "        )\n",
     "    return results\n",
     "\n",
@@ -252,11 +274,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## S8 chip resistance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "feeding_channel_height = 75  # * u.um\n",
+    "split = metadata[\"Basilisk S8 FC80 L35 W1.4 TS2.1\"][\"split\"]\n",
+    "lane_length = metadata[\"Basilisk S8 FC80 L35 W1.4 TS2.1\"][\"lane_length\"]\n",
+    "feeding_channel_width = metadata[\"Basilisk S8 FC80 L35 W1.4 TS2.1\"][\n",
+    "    \"feeding_channel_width\"\n",
+    "]\n",
+    "R = split * lane_length * resistance(feeding_channel_height, feeding_channel_width)\n",
+    "R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feeding_channel_height = 75  # * u.um\n",
+    "split = metadata[\"Basilisk S8 FC40 L35 W1.4 TS1.1\"][\"split\"]\n",
+    "lane_length = metadata[\"Basilisk S8 FC40 L35 W1.4 TS1.1\"][\"lane_length\"]\n",
+    "feeding_channel_width = metadata[\"Basilisk S8 FC40 L35 W1.4 TS1.1\"][\n",
+    "    \"feeding_channel_width\"\n",
+    "]\n",
+    "R = split * lane_length * resistance(feeding_channel_height, feeding_channel_width)\n",
+    "R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s3_metadata = {}\n",
+    "main_cell = s.chip(\n",
+    "    \"Big Snake\",\n",
+    "    s.snake,\n",
+    "    dims=np.array([23e3, 13e3]),\n",
+    "    split=3,\n",
+    "    gap_lanes=0,\n",
+    "    feeding_channel_width=45,\n",
+    "    trench_spacing=2,\n",
+    "    trench_gap=20,\n",
+    "    trench_width=1.5,\n",
+    "    port_margin=1.5e3,\n",
+    "    top_margin=1.2e3,\n",
+    "    bottom_margin=1.2e3,\n",
+    "    horizontal_margin=4e3,\n",
+    "    draw_trenches=False,\n",
+    "    metadata=s3_metadata,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_cell(main_cell)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s3_metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feeding_channel_height = 100  # * u.um\n",
+    "split = s3_metadata[\"Big Snake\"][\"split\"]\n",
+    "lane_length = s3_metadata[\"Big Snake\"][\"lane_length\"]\n",
+    "feeding_channel_width = s3_metadata[\"Big Snake\"][\"feeding_channel_width\"]\n",
+    "R = split * lane_length * resistance(feeding_channel_height, feeding_channel_width)\n",
+    "R"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -584,9 +696,9 @@
     "    \"gap_lanes\",\n",
     ")\n",
     "params = [\n",
+    "    dict(feeding_channel_width=80, trench_spacing=1.1, **base_params),\n",
     "    dict(feeding_channel_width=80, trench_spacing=2.1, **base_params),\n",
-    "    dict(feeding_channel_width=80, trench_spacing=2.1, **base_params),\n",
-    "    dict(feeding_channel_width=40, trench_spacing=1.1, **base_params),\n",
+    "    dict(feeding_channel_width=80, trench_spacing=3.1, **base_params),\n",
     "    dict(lanes_per_snake=3, trench_spacing=2.1, **manifold_params),\n",
     "    dict(lanes_per_snake=3, trench_spacing=2.1, **manifold_params),\n",
     "    dict(lanes_per_snake=5, trench_spacing=2.1, **manifold_params)\n",
@@ -696,7 +808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
