[shenker/snakenbake] Can encode chip_id in registration marks.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -96,6 +96,7 @@
     "    trench_gap=20,\n",
     "    trench_width=1.5,\n",
     "    registration_marks=True,\n",
+    "    chip_id=2**10 - 1,\n",
     "    ticks=False,\n",
     "    port_margin=0.5e3,\n",
     "    top_margin=1.2e3,\n",
