[shenker/snakenbake] Manifold port placement now matches single snakes, with inlets in upper left and lower right.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -101,7 +101,7 @@
     "    port_margin=0.5e3,\n",
     "    top_margin=1.2e3,\n",
     "    bottom_margin=0.6e3,\n",
-    "    draw_trenches=True,\n",
+    "    draw_trenches=False,\n",
     "    metadata=metadata,\n",
     ")\n",
     "# print(metadata)\n",
@@ -126,6 +126,57 @@
    "outputs": [],
    "source": [
     "np.log2(metadata[\"Big Snake\"][\"trenches_per_set\"] / 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w = 400 * u.um\n",
+    "h = 75 * u.um\n",
+    "D_h = 2 * w * h / (w + h)\n",
+    "Q = 20 * u.uL / u.minute\n",
+    "nu = 0.7 * u.centistokes\n",
+    "Re = Q * D_h / ((w * h) * nu)\n",
+    "L_e = D_h * (0.55 / (0.13 * Re + 1) + 0.065 * Re)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Re.to_base_units()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D_h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L_e"
    ]
   },
   {
@@ -697,10 +748,22 @@
     "    \"gap_lanes\",\n",
     ")\n",
     "params = [\n",
-    "    dict(feeding_channel_width=80, trench_spacing=1.1, **base_params),\n",
+    "    dict(\n",
+    "        feeding_channel_width=80,\n",
+    "        trench_spacing=1.1,\n",
+    "        registration_marks=True,\n",
+    "        chip_id=0,\n",
+    "        **base_params,\n",
+    "    ),\n",
     "    dict(feeding_channel_width=80, trench_spacing=2.1, **base_params),\n",
     "    dict(feeding_channel_width=80, trench_spacing=3.1, **base_params),\n",
-    "    dict(lanes_per_snake=3, trench_spacing=2.1, **manifold_params),\n",
+    "    dict(\n",
+    "        lanes_per_snake=3,\n",
+    "        trench_spacing=2.1,\n",
+    "        registration_marks=True,\n",
+    "        chip_id=1,\n",
+    "        **manifold_params,\n",
+    "    ),\n",
     "    dict(lanes_per_snake=3, trench_spacing=2.1, **manifold_params),\n",
     "    dict(lanes_per_snake=5, trench_spacing=2.1, **manifold_params)\n",
     "    #     {\n",
@@ -733,14 +796,14 @@
     "# chips = [chips[0]]*6\n",
     "main_cell = s.wafer(\n",
     "    chips,\n",
-    "    \"Basilisk \\n JQS/DE/YG 200202\",\n",
+    "    \"Basilisk \\n JQS/DE/YG 200213\",\n",
     "    text=True,\n",
     "    mask=False,\n",
     "    chip_area_margin=1e3,\n",
     "    chip_area_angle=np.pi * 0.22,\n",
     "    diameter=(4 * u.inch).to(u.um).magnitude,\n",
     ")\n",
-    "# write_gds(main_cell, \"200202basilisk.gds\")"
+    "write_gds(main_cell, \"200213basilisk.gds\")"
    ]
   },
   {
