[shenker/snakenbake] Switched to U-turn manifold inputs.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -89,7 +89,9 @@
     "    num_manifolds=1,\n",
     "    lanes_per_snake=5,\n",
     "    manifold_width=200,\n",
-    "    manifold_input_length=0.5e3,\n",
+    "    manifold_input_margin=2e3,\n",
+    "    manifold_bend_margin=0.2e3,\n",
+    "    manifold_bend_radius=300,\n",
     "    manifold_margin=100,\n",
     "    feeding_channel_width=40,\n",
     "    trench_spacing=2,\n",
@@ -99,8 +101,8 @@
     "    chip_id=2**10 - 1,\n",
     "    ticks=False,\n",
     "    port_margin=0.5e3,\n",
-    "    top_margin=1.2e3,\n",
-    "    bottom_margin=0.6e3,\n",
+    "    top_margin=0.9e3,\n",
+    "    bottom_margin=0.9e3,\n",
     "    draw_trenches=False,\n",
     "    metadata=metadata,\n",
     ")\n",
@@ -137,7 +139,7 @@
     "w = 400 * u.um\n",
     "h = 75 * u.um\n",
     "D_h = 2 * w * h / (w + h)\n",
-    "Q = 20 * u.uL / u.minute\n",
+    "Q = 20 * u.uL / u.minute * 30\n",
     "nu = 0.7 * u.centistokes\n",
     "Re = Q * D_h / ((w * h) * nu)\n",
     "L_e = D_h * (0.55 / (0.13 * Re + 1) + 0.065 * Re)"
