[shenker/snakenbake] Replaced L shape with QR target, put QR target on same grid as barcodes, reduced registration mark period from 50 to 25.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -103,7 +103,7 @@
     "    port_margin=0.5e3,\n",
     "    top_margin=0.9e3,\n",
     "    bottom_margin=0.9e3,\n",
-    "    draw_trenches=False,\n",
+    "    draw_trenches=True,\n",
     "    metadata=metadata,\n",
     ")\n",
     "# print(metadata)\n",
@@ -179,6 +179,24 @@
    "outputs": [],
    "source": [
     "L_e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "6.5 * 2048 / np.array([20, 40, 60, 100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "4.25 * 2960 / np.array([20, 40, 60, 100])"
    ]
   },
   {
@@ -279,7 +297,7 @@
     "    return results\n",
     "\n",
     "\n",
-    "res = manifold_flow_rates(feeding_channel_height=100, **metadata[\"Big Snake\"])\n",
+    "res = manifold_flow_rates(feeding_channel_height=75, **metadata[\"Big Snake\"])\n",
     "res"
    ]
   },
@@ -740,9 +758,14 @@
     "            split=None,\n",
     "            num_manifolds=1,\n",
     "            manifold_width=200,\n",
-    "            manifold_input_length=0.5e3,\n",
+    "            manifold_input_margin=2e3,\n",
+    "            manifold_bend_margin=0.2e3,\n",
+    "            manifold_bend_radius=300,\n",
     "            manifold_margin=100,\n",
     "            feeding_channel_width=40,\n",
+    "            port_margin=0.5e3,\n",
+    "            top_margin=0.9e3,\n",
+    "            bottom_margin=0.9e3,\n",
     "            # trench_spacing=2.1,\n",
     "        ),\n",
     "    },\n",
@@ -757,8 +780,18 @@
     "        chip_id=0,\n",
     "        **base_params,\n",
     "    ),\n",
-    "    dict(feeding_channel_width=80, trench_spacing=2.1, **base_params),\n",
-    "    dict(feeding_channel_width=80, trench_spacing=3.1, **base_params),\n",
+    "    dict(\n",
+    "        feeding_channel_width=80,\n",
+    "        trench_spacing=2.1,\n",
+    "        registration_marks=False,\n",
+    "        **base_params,\n",
+    "    ),\n",
+    "    dict(\n",
+    "        feeding_channel_width=80,\n",
+    "        trench_spacing=3.1,\n",
+    "        registration_marks=False,\n",
+    "        **base_params,\n",
+    "    ),\n",
     "    dict(\n",
     "        lanes_per_snake=3,\n",
     "        trench_spacing=2.1,\n",
@@ -766,8 +799,18 @@
     "        chip_id=1,\n",
     "        **manifold_params,\n",
     "    ),\n",
-    "    dict(lanes_per_snake=3, trench_spacing=2.1, **manifold_params),\n",
-    "    dict(lanes_per_snake=5, trench_spacing=2.1, **manifold_params)\n",
+    "    dict(\n",
+    "        lanes_per_snake=3,\n",
+    "        trench_spacing=2.1,\n",
+    "        registration_marks=False,\n",
+    "        **manifold_params,\n",
+    "    ),\n",
+    "    dict(\n",
+    "        lanes_per_snake=5,\n",
+    "        trench_spacing=2.1,\n",
+    "        registration_marks=False,\n",
+    "        **manifold_params,\n",
+    "    )\n",
     "    #     {\n",
     "    #         **base_params,\n",
     "    #         **dict(\n",
@@ -785,10 +828,11 @@
     "#          dict(split=8, fc=40, w=1.4, ts=1.6, tg=10), dict(split=8, fc=40, w=1.4, ts=1.1, tg=10), dict(split=8, fc=40, w=1.4, ts=1.1, tg=10)]\n",
     "chips = [\n",
     "    s.chip(\n",
-    "        \"Basilisk {ports} FC{feeding_channel_width} L{trench_length} W{trench_width} TS{trench_spacing}\".format(\n",
+    "        \"Basilisk {ports} FC{feeding_channel_width} L{trench_length} W{trench_width} TS{trench_spacing}{reg}\".format(\n",
     "            ports=f\"S{p['split']}\"\n",
     "            if np.isscalar(p[\"split\"])\n",
     "            else \"S{} LS{}\".format(p[\"num_manifolds\"], p[\"lanes_per_snake\"]),\n",
+    "            reg=\" M\" if p[\"registration_marks\"] else \"\",\n",
     "            **p,\n",
     "        ),\n",
     "        **p,\n",
