[shenker/snakenbake] Cleaned up FOV fit calculation.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -66,6 +66,80 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fovs_per_chip(\n",
+    "    fov,\n",
+    "    feeding_channel_width=None,\n",
+    "    trench_length=None,\n",
+    "    trench_gap=None,\n",
+    "    num_lanes=None,\n",
+    "    lane_with_trenches_length=None,\n",
+    "    **kwargs,\n",
+    "):\n",
+    "    hfovs = int(np.ceil(lane_with_trenches_length / fov[0]))\n",
+    "    y = 2 * trench_length + trench_gap\n",
+    "    unit_cell_height = y + feeding_channel_width\n",
+    "    trench_sets_per_fov = 2\n",
+    "    while True:\n",
+    "        delta_y = feeding_channel_width + trench_length\n",
+    "        if y + delta_y < fov[1]:\n",
+    "            y += delta_y\n",
+    "            unit_cell_height = y + trench_gap\n",
+    "            trench_sets_per_fov += 1\n",
+    "        else:\n",
+    "            break\n",
+    "        delta_y = trench_gap + trench_length\n",
+    "        if y + delta_y < fov[1]:\n",
+    "            y += delta_y\n",
+    "            unit_cell_height = y + feeding_channel_width\n",
+    "            trench_sets_per_fov += 1\n",
+    "        else:\n",
+    "            break\n",
+    "    vfovs = int(np.ceil(num_lanes * 2 / trench_sets_per_fov))\n",
+    "    return np.array([hfovs, vfovs]), unit_cell_height, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_fovs(fov_dims, metadata):\n",
+    "    for fov_name, fov_dim in fov_dims.items():\n",
+    "        fovs, unit_cell_height, active_height = fovs_per_chip(fov_dim, **metadata)\n",
+    "        print(f\"{fov_name}: {fov_dim[0]} x {fov_dim[1]}\")\n",
+    "        # print(metadata)\n",
+    "        print(\"    FOVs: {} ({} x {})\".format(np.product(fovs), fovs[0], fovs[1]))\n",
+    "        print(\"    unit cell height:\", unit_cell_height)\n",
+    "        print(\n",
+    "            \"    active height: {} (margin: {})\".format(\n",
+    "                active_height, fov_dim[1] - active_height\n",
+    "            )\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "camera_dims = {\n",
+    "    \"iris\": (4.25, np.array([5056, 2960])),\n",
+    "    \"bsi\": (6.5, np.array([2048, 2048])),\n",
+    "}\n",
+    "fov_dims = {}\n",
+    "for camera, (pixel_size, fov_dim) in camera_dims.items():\n",
+    "    for mag in (20, 40, 60, 100):\n",
+    "        fov_dims[f\"{camera} {mag}x\"] = fov_dim * pixel_size / mag"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -197,6 +271,24 @@
    "outputs": [],
    "source": [
     "4.25 * 2960 / np.array([20, 40, 60, 100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "6.5 / 40"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "4.25 / 20"
    ]
   },
   {
@@ -635,44 +727,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fovs_per_chip(\n",
-    "    fov,\n",
-    "    feeding_channel_width=None,\n",
-    "    trench_length=None,\n",
-    "    trench_gap=None,\n",
-    "    num_lanes=None,\n",
-    "    lane_with_trenches_length=None,\n",
-    "    **kwargs,\n",
-    "):\n",
-    "    hfovs = int(np.ceil(lane_with_trenches_length / fov[0]))\n",
-    "    y = 2 * trench_length + trench_gap\n",
-    "    unit_cell_height = y + feeding_channel_width\n",
-    "    trench_sets_per_fov = 2\n",
-    "    while True:\n",
-    "        delta_y = feeding_channel_width + trench_length\n",
-    "        if y + delta_y < fov[1]:\n",
-    "            y += delta_y\n",
-    "            unit_cell_height = y + trench_gap\n",
-    "            trench_sets_per_fov += 1\n",
-    "        else:\n",
-    "            break\n",
-    "        delta_y = trench_gap + trench_length\n",
-    "        if y + delta_y < fov[1]:\n",
-    "            y += delta_y\n",
-    "            unit_cell_height = y + feeding_channel_width\n",
-    "            trench_sets_per_fov += 1\n",
-    "        else:\n",
-    "            break\n",
-    "    vfovs = int(np.ceil(num_lanes * 2 / trench_sets_per_fov))\n",
-    "    return np.array([hfovs, vfovs]), unit_cell_height, y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "fov = np.array([5056, 2960]) * 4.25 / 20"
    ]
   },
@@ -900,6 +954,31 @@
    "source": [
     "plot_cell(chips[5])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_fovs(fov_dims, metadata[\"Basilisk S1 LS5 FC40 L35 W1.4 TS2.1\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_fovs(fov_dims, metadata[\"Basilisk S8 FC80 L35 W1.4 TS2.1\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
