[shenker/snakenbake] Convenience function for comparing manifold and non-manifold chip resistances.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -167,7 +167,7 @@
     "    manifold_bend_margin=0.2e3,\n",
     "    manifold_bend_radius=300,\n",
     "    manifold_margin=100,\n",
-    "    feeding_channel_width=40,\n",
+    "    feeding_channel_width=80,\n",
     "    trench_spacing=2,\n",
     "    trench_gap=20,\n",
     "    trench_width=1.5,\n",
@@ -184,6 +184,29 @@
     "# plot_cell(main_cell)\n",
     "print(metadata[\"Big Snake\"][\"num_trenches\"])\n",
     "write_gds(main_cell, \"200212manifold_test.gds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_resistance(75, metadata[\"Big Snake\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = manifold_flow_rates(feeding_channel_height=75, **metadata[\"Big Snake\"])\n",
+    "\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "for r in res:\n",
+    "    v = r[\"q\"]\n",
+    "    plt.plot(v / v.max())"
    ]
   },
   {
@@ -386,11 +409,7 @@
     "        results.append(\n",
     "            {\"R_snake\": R_snake, \"R_left\": R_left, \"R_right\": R_right, \"q\": q, \"R\": R}\n",
     "        )\n",
-    "    return results\n",
-    "\n",
-    "\n",
-    "res = manifold_flow_rates(feeding_channel_height=75, **metadata[\"Big Snake\"])\n",
-    "res"
+    "    return results"
    ]
   },
   {
@@ -399,6 +418,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "res = manifold_flow_rates(feeding_channel_height=75, **metadata[\"Big Snake\"])\n",
+    "\n",
     "plt.figure(figsize=(12, 8))\n",
     "for r in res:\n",
     "    v = r[\"q\"]\n",
@@ -944,6 +965,62 @@
    "outputs": [],
    "source": [
     "metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_resistance(feeding_channel_height, metadata):\n",
+    "    if \"manifold_split\" in metadata:\n",
+    "        res = manifold_flow_rates(feeding_channel_height, **metadata)\n",
+    "        R = np.array([r[\"R\"] for r in res]) * np.asarray(metadata[\"manifold_split\"])\n",
+    "    else:\n",
+    "        feeding_channel_height = 100  # * u.um\n",
+    "        split = metadata[\"split\"]\n",
+    "        lane_length = metadata[\"lane_length\"]\n",
+    "        feeding_channel_width = metadata[\"feeding_channel_width\"]\n",
+    "        R = (\n",
+    "            np.asarray(split)\n",
+    "            * lane_length\n",
+    "            * resistance(feeding_channel_height, feeding_channel_width)\n",
+    "        )\n",
+    "    return R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_resistance(\n",
+    "    80, {\"lane_length\": 17920, \"split\": np.array([19]), \"feeding_channel_width\": 90}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_resistance(\n",
+    "    80, {\"lane_length\": 17920, \"split\": np.array([25]), \"feeding_channel_width\": 45}\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for name, md in metadata.items():\n",
+    "    R = get_resistance(75, md)\n",
+    "    print(f\"{name}: {R}\")"
    ]
   },
   {
