[shenker/snakenbake] WIP manifold_input_style. Implemented bend-out and u-turn. Also modified plot_cell to handle polygons, not just cells.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -46,7 +46,12 @@
    "source": [
     "def plot_cell(cell, exclude=(2,)):\n",
     "    # FROM: https://github.com/heitzmann/gdspy/issues/42\n",
-    "    poly_dict = cell.get_polygons(by_spec=True)\n",
+    "    if hasattr(cell, \"get_polygons\"):\n",
+    "        poly_dict = cell.get_polygons(by_spec=True)\n",
+    "    else:\n",
+    "        poly_dict = {\n",
+    "            l_d: [p] for l_d, p in zip(zip(cell.layers, cell.datatypes), cell.polygons)\n",
+    "        }\n",
     "    plt.figure(figsize=(40, 20))\n",
     "    for layer_datatype, polys in poly_dict.items():\n",
     "        if layer_datatype[0] in exclude:\n",
@@ -152,6 +157,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "a = gdspy.Round((0, 0), 10, initial_angle=0, final_angle=np.pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(1 / 2 + 1 / 2) + np.array([0, 1 / 2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_cell(gdspy.Round((0, 0), 10, initial_angle=0, final_angle=np.pi / 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_cell(gdspy.Round((0, 0), 10, initial_angle=np.pi, final_angle=3 / 2 * np.pi))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "metadata = {}\n",
     "# chip_dims = np.array([25e3, 16e3])\n",
     "chip_dims = np.array([38e3, 20e3])\n",
@@ -160,30 +201,62 @@
     "    s.manifold_snake,\n",
     "    dims=chip_dims,\n",
     "    split=None,\n",
+    "    manifold_input_style=\"bend-out\",\n",
     "    num_manifolds=1,\n",
-    "    lanes_per_snake=5,\n",
+    "    lanes_per_snake=3,\n",
     "    manifold_width=200,\n",
     "    manifold_input_margin=2e3,\n",
     "    manifold_bend_margin=0.2e3,\n",
     "    manifold_bend_radius=300,\n",
     "    manifold_margin=100,\n",
-    "    feeding_channel_width=80,\n",
+    "    feeding_channel_width=40,\n",
     "    trench_spacing=2,\n",
     "    trench_gap=20,\n",
     "    trench_width=1.5,\n",
     "    registration_marks=True,\n",
+    "    # mark_size=2,\n",
+    "    # mark_spacing=2,\n",
     "    chip_id=2**10 - 1,\n",
     "    ticks=False,\n",
     "    port_margin=0.5e3,\n",
     "    top_margin=0.9e3,\n",
     "    bottom_margin=0.9e3,\n",
-    "    draw_trenches=True,\n",
+    "    draw_trenches=False,\n",
+    "    metadata=metadata,\n",
+    ")\n",
+    "main_cell2 = s.chip(\n",
+    "    \"Big Snake\",\n",
+    "    s.manifold_snake,\n",
+    "    dims=chip_dims,\n",
+    "    split=None,\n",
+    "    manifold_input_style=\"u-turn\",\n",
+    "    num_manifolds=1,\n",
+    "    lanes_per_snake=3,\n",
+    "    manifold_width=200,\n",
+    "    manifold_input_margin=2e3,\n",
+    "    manifold_bend_margin=0.2e3,\n",
+    "    manifold_bend_radius=300,\n",
+    "    manifold_margin=100,\n",
+    "    feeding_channel_width=40,\n",
+    "    trench_spacing=2,\n",
+    "    trench_gap=20,\n",
+    "    trench_width=1.5,\n",
+    "    registration_marks=True,\n",
+    "    # mark_size=2,\n",
+    "    # mark_spacing=2,\n",
+    "    chip_id=2**10 - 1,\n",
+    "    ticks=False,\n",
+    "    port_margin=0.5e3,\n",
+    "    top_margin=0.9e3,\n",
+    "    bottom_margin=0.9e3,\n",
+    "    draw_trenches=False,\n",
     "    metadata=metadata,\n",
     ")\n",
     "# print(metadata)\n",
-    "# plot_cell(main_cell)\n",
-    "print(metadata[\"Big Snake\"][\"num_trenches\"])\n",
-    "write_gds(main_cell, \"200212manifold_test.gds\")"
+    "plot_cell(main_cell)\n",
+    "plot_cell(main_cell2)\n",
+    "# print(metadata['Big Snake']['num_trenches'])\n",
+    "# write_gds(main_cell, '200213manifold_test.gds')"
    ]
   },
   {
