[shenker/snakenbake] Made chips smaller to allow for more margin at the edge of wafer, wafer design now includes two different registration mark sizes for testing.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -879,7 +879,7 @@
    "source": [
     "%%time\n",
     "metadata = {}\n",
-    "chip_dims = np.array([38e3, 20e3])\n",
+    "chip_dims = np.array([34e3, 18e3])\n",
     "base_params = dict(\n",
     "    design_func=s.snake,\n",
     "    dims=chip_dims,\n",
@@ -926,6 +926,9 @@
     "        trench_spacing=1.1,\n",
     "        registration_marks=True,\n",
     "        chip_id=0,\n",
+    "        mark_size=2,\n",
+    "        mark_spacing=1.5,\n",
+    "        tick_period=50,\n",
     "        **base_params,\n",
     "    ),\n",
     "    dict(\n",
@@ -945,6 +948,8 @@
     "        trench_spacing=2.1,\n",
     "        registration_marks=True,\n",
     "        chip_id=1,\n",
+    "        mark_size=1,\n",
+    "        mark_spacing=1,\n",
     "        **manifold_params,\n",
     "    ),\n",
     "    dict(\n",
@@ -980,7 +985,7 @@
     "            ports=f\"S{p['split']}\"\n",
     "            if np.isscalar(p[\"split\"])\n",
     "            else \"S{} LS{}\".format(p[\"num_manifolds\"], p[\"lanes_per_snake\"]),\n",
-    "            reg=\" M\" if p[\"registration_marks\"] else \"\",\n",
+    "            reg=f\" M{p['mark_size']}\" if p[\"registration_marks\"] else \"\",\n",
     "            **p,\n",
     "        ),\n",
     "        **p,\n",
@@ -990,14 +995,14 @@
     "# chips = [chips[0]]*6\n",
     "main_cell = s.wafer(\n",
     "    chips,\n",
-    "    \"Basilisk \\n JQS/DE/YG 200213\",\n",
+    "    \"Basilisk \\n JQS/DE/YG 200213.2\",\n",
     "    text=True,\n",
     "    mask=False,\n",
-    "    chip_area_margin=1e3,\n",
+    "    chip_area_margin=5e3,\n",
     "    chip_area_angle=np.pi * 0.22,\n",
     "    diameter=(4 * u.inch).to(u.um).magnitude,\n",
     ")\n",
-    "write_gds(main_cell, \"200213basilisk.gds\")"
+    "write_gds(main_cell, \"200213.2basilisk.gds\")"
    ]
   },
   {
@@ -1094,15 +1099,6 @@
     "for name, md in metadata.items():\n",
     "    R = get_resistance(75, md)\n",
     "    print(f\"{name}: {R}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_cell(chips[5])"
    ]
   },
   {
