[shenker/snakenbake] Implemented bend-in manifold style.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -175,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cell(gdspy.Round((0, 0), 10, initial_angle=0, final_angle=np.pi / 2))"
+    "(-1 + np.array([3, 2])) / 2  # * np.pi"
    ]
   },
   {
@@ -184,7 +184,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_cell(gdspy.Round((0, 0), 10, initial_angle=np.pi, final_angle=3 / 2 * np.pi))"
+    "plot_cell(gdspy.Round((0, 0), 10, initial_angle=np.pi, final_angle=np.pi / 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_cell(gdspy.Round((0, 0), 10, initial_angle=2 * np.pi, final_angle=3 / 2 * np.pi))"
    ]
   },
   {
@@ -201,7 +210,7 @@
     "    s.manifold_snake,\n",
     "    dims=chip_dims,\n",
     "    split=None,\n",
-    "    manifold_input_style=\"bend-out\",\n",
+    "    manifold_input_style=\"bend-in\",\n",
     "    num_manifolds=1,\n",
     "    lanes_per_snake=3,\n",
     "    manifold_width=200,\n",
@@ -229,7 +238,7 @@
     "    s.manifold_snake,\n",
     "    dims=chip_dims,\n",
     "    split=None,\n",
-    "    manifold_input_style=\"u-turn\",\n",
+    "    manifold_input_style=\"bend-out\",\n",
     "    num_manifolds=1,\n",
     "    lanes_per_snake=3,\n",
     "    manifold_width=200,\n",
@@ -256,7 +265,7 @@
     "plot_cell(main_cell)\n",
     "plot_cell(main_cell2)\n",
     "# print(metadata['Big Snake']['num_trenches'])\n",
-    "# write_gds(main_cell, '200213manifold_test.gds')"
+    "write_gds(main_cell, \"200214manifold_test.gds\")"
    ]
   },
   {
