--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -203,8 +203,10 @@
    "outputs": [],
    "source": [
     "metadata = {}\n",
+    "metadata2 = {}\n",
     "# chip_dims = np.array([25e3, 16e3])\n",
-    "chip_dims = np.array([38e3, 20e3])\n",
+    "# chip_dims = np.array([38e3, 20e3])\n",
+    "chip_dims = np.array([50e3, 50e3])\n",
     "main_cell = s.chip(\n",
     "    \"Big Snake\",\n",
     "    s.manifold_snake,\n",
@@ -218,6 +220,7 @@
     "    manifold_bend_margin=0.2e3,\n",
     "    manifold_bend_radius=300,\n",
     "    manifold_margin=100,\n",
+    "    border_margin=400,\n",
     "    feeding_channel_width=40,\n",
     "    trench_spacing=2,\n",
     "    trench_gap=20,\n",
@@ -227,45 +230,17 @@
     "    # mark_spacing=2,\n",
     "    chip_id=2**10 - 1,\n",
     "    ticks=False,\n",
-    "    port_margin=0.5e3,\n",
-    "    top_margin=0.9e3,\n",
-    "    bottom_margin=0.9e3,\n",
-    "    draw_trenches=False,\n",
-    "    metadata=metadata,\n",
-    ")\n",
-    "main_cell2 = s.chip(\n",
-    "    \"Big Snake\",\n",
-    "    s.manifold_snake,\n",
-    "    dims=chip_dims,\n",
-    "    split=None,\n",
-    "    manifold_input_style=\"bend-out\",\n",
-    "    num_manifolds=1,\n",
-    "    lanes_per_snake=3,\n",
-    "    manifold_width=200,\n",
-    "    manifold_input_margin=2e3,\n",
-    "    manifold_bend_margin=0.2e3,\n",
-    "    manifold_bend_radius=300,\n",
-    "    manifold_margin=100,\n",
-    "    feeding_channel_width=40,\n",
-    "    trench_spacing=2,\n",
-    "    trench_gap=20,\n",
-    "    trench_width=1.5,\n",
-    "    registration_marks=True,\n",
-    "    # mark_size=2,\n",
-    "    # mark_spacing=2,\n",
-    "    chip_id=2**10 - 1,\n",
-    "    ticks=False,\n",
-    "    port_margin=0.5e3,\n",
+    "    port_margin=0.3e3,\n",
     "    top_margin=0.9e3,\n",
     "    bottom_margin=0.9e3,\n",
     "    draw_trenches=False,\n",
     "    metadata=metadata,\n",
     ")\n",
     "# print(metadata)\n",
-    "plot_cell(main_cell)\n",
-    "plot_cell(main_cell2)\n",
-    "# print(metadata['Big Snake']['num_trenches'])\n",
-    "write_gds(main_cell, \"200214manifold_test.gds\")"
+    "# plot_cell(main_cell)\n",
+    "# plot_cell(main_cell2)\n",
+    "print(metadata[\"Big Snake\"][\"num_trenches\"])\n",
+    "# write_gds(main_cell, '200214manifold_test.gds')"
    ]
   },
   {
