--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -918,7 +918,11 @@
     "    dict(\n",
     "        feeding_channel_width=80,\n",
     "        trench_spacing=2.1,\n",
-    "        registration_marks=False,\n",
+    "        registration_marks=True,\n",
+    "        chip_id=0,\n",
+    "        mark_size=2,\n",
+    "        mark_spacing=1.5,\n",
+    "        tick_period=50,\n",
     "        **base_params,\n",
     "    ),\n",
     "    dict(\n",
@@ -945,7 +949,10 @@
     "    dict(\n",
     "        lanes_per_snake=5,\n",
     "        trench_spacing=2.1,\n",
-    "        registration_marks=False,\n",
+    "        registration_marks=True,\n",
+    "        chip_id=1,\n",
+    "        mark_size=1,\n",
+    "        mark_spacing=1,\n",
     "        **manifold_params,\n",
     "    )\n",
     "    #     {\n",
@@ -979,14 +986,13 @@
     "# chips = [chips[0]]*6\n",
     "main_cell = s.wafer(\n",
     "    chips,\n",
-    "    \"Basilisk \\n JQS/DE/YG 200213.2\",\n",
+    "    \"Basilisk \\n JQS/DE/YG 200225\",\n",
     "    text=True,\n",
     "    mask=False,\n",
-    "    chip_area_margin=5e3,\n",
-    "    chip_area_angle=np.pi * 0.22,\n",
+    "    chip_dims=chip_dims,\n",
     "    diameter=(4 * u.inch).to(u.um).magnitude,\n",
     ")\n",
-    "write_gds(main_cell, \"200213.2basilisk.gds\")"
+    "write_gds(main_cell, \"200225basilisk.gds\")"
    ]
   },
   {
@@ -1009,15 +1015,6 @@
    "outputs": [],
    "source": [
     "# print text summary for wafer spreadsheet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_cell(main_cell)"
    ]
   },
   {
