[shenker/snakenbake] Write wafer manifest on left side of wafer.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -920,8 +920,8 @@
     "        trench_spacing=2.1,\n",
     "        registration_marks=True,\n",
     "        chip_id=0,\n",
-    "        mark_size=2,\n",
-    "        mark_spacing=1.5,\n",
+    "        mark_size=1,\n",
+    "        mark_spacing=1,\n",
     "        tick_period=50,\n",
     "        **base_params,\n",
     "    ),\n",
@@ -970,29 +970,28 @@
     "]\n",
     "# params = [dict(split=4, fc=40, w=1.4, ts=1.6, tg=10), dict(split=4, fc=40, w=1.4, ts=1.1, tg=10), dict(split=4, fc=40, w=1.4, ts=1.1, tg=10),\n",
     "#          dict(split=8, fc=40, w=1.4, ts=1.6, tg=10), dict(split=8, fc=40, w=1.4, ts=1.1, tg=10), dict(split=8, fc=40, w=1.4, ts=1.1, tg=10)]\n",
-    "chips = [\n",
-    "    s.chip(\n",
-    "        \"Basilisk {ports} FC{feeding_channel_width} L{trench_length} W{trench_width} TS{trench_spacing}{reg}\".format(\n",
-    "            ports=f\"S{p['split']}\"\n",
-    "            if np.isscalar(p[\"split\"])\n",
-    "            else \"S{} LS{}\".format(p[\"num_manifolds\"], p[\"lanes_per_snake\"]),\n",
-    "            reg=f\" M{p['mark_size']}\" if p[\"registration_marks\"] else \"\",\n",
-    "            **p,\n",
-    "        ),\n",
+    "chip_names = [\n",
+    "    \"Basilisk {ports} FC{feeding_channel_width} L{trench_length} W{trench_width} TS{trench_spacing}{reg}\".format(\n",
+    "        ports=f\"S{p['split']}\"\n",
+    "        if np.isscalar(p[\"split\"])\n",
+    "        else \"S{} LS{}\".format(p[\"num_manifolds\"], p[\"lanes_per_snake\"]),\n",
+    "        reg=f\" M{p['mark_size']}\" if p[\"registration_marks\"] else \"\",\n",
     "        **p,\n",
     "    )\n",
     "    for p in params\n",
     "]\n",
-    "# chips = [chips[0]]*6\n",
+    "chips = [s.chip(name, **p) for p, name in zip(params, chip_names)]\n",
+    "wafer_manifest = \"\\n\".join([f\"{idx+1}) \" + name for idx, name in enumerate(chip_names)])\n",
     "main_cell = s.wafer(\n",
     "    chips,\n",
-    "    \"Basilisk \\n JQS/DE/YG 200225\",\n",
+    "    text_right=\"Basilisk \\n JQS/DE/YG 200225.2\",\n",
+    "    text_left=wafer_manifest,\n",
     "    text=True,\n",
     "    mask=False,\n",
     "    chip_dims=chip_dims,\n",
     "    diameter=(4 * u.inch).to(u.um).magnitude,\n",
     ")\n",
-    "write_gds(main_cell, \"200225basilisk.gds\")"
+    "write_gds(main_cell, \"200225.2basilisk.gds\")"
    ]
   },
   {
