[shenker/snakenbake] Moved plot_cell, write_gds into util.py.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -44,38 +44,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_cell(cell, exclude=(2,)):\n",
-    "    # FROM: https://github.com/heitzmann/gdspy/issues/42\n",
-    "    if hasattr(cell, \"get_polygons\"):\n",
-    "        poly_dict = cell.get_polygons(by_spec=True)\n",
-    "    else:\n",
-    "        poly_dict = {\n",
-    "            l_d: [p] for l_d, p in zip(zip(cell.layers, cell.datatypes), cell.polygons)\n",
-    "        }\n",
-    "    plt.figure(figsize=(40, 20))\n",
-    "    for layer_datatype, polys in poly_dict.items():\n",
-    "        if layer_datatype[0] in exclude:\n",
-    "            continue\n",
-    "        for poly in polys:\n",
-    "            plt.fill(*poly.T, lw=0.5, ec=\"k\", fc=(1, 0, 0, 0.5))\n",
-    "    plt.axes().set_aspect(\"equal\", \"datalim\")\n",
-    "\n",
-    "\n",
-    "def write_gds(main_cell, filename, unit=1.0e-6, precision=1.0e-9):\n",
-    "    # writer = gdspy.GdsWriter(filename, unit=unit, precision=precision)\n",
-    "    # for cell in [main_cell] + list(main_cell.get_dependencies(True)):\n",
-    "    #    writer.write_cell(cell)\n",
-    "    # writer.close()\n",
-    "    cells = [main_cell] + list(main_cell.get_dependencies(True))\n",
-    "    gdspy.write_gds(filename, cells=cells, unit=unit, precision=precision)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def fovs_per_chip(\n",
     "    fov,\n",
     "    feeding_channel_width=None,\n",
@@ -984,14 +952,14 @@
     "wafer_manifest = \"\\n\".join([f\"{idx+1}) \" + name for idx, name in enumerate(chip_names)])\n",
     "main_cell = s.wafer(\n",
     "    chips,\n",
-    "    text_right=\"Basilisk \\n JQS/DE/YG 200225.2\",\n",
+    "    text_right=\"Basilisk \\n JQS/DE/YG 200226\",\n",
     "    text_left=wafer_manifest,\n",
     "    text=True,\n",
     "    mask=False,\n",
     "    chip_dims=chip_dims,\n",
     "    diameter=(4 * u.inch).to(u.um).magnitude,\n",
     ")\n",
-    "write_gds(main_cell, \"200225.2basilisk.gds\")"
+    "s.write_gds(main_cell, \"200226basilisk.gds\")"
    ]
   },
   {
