[shenker/snakenbake] Include chip ID in chip name.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -202,7 +202,7 @@
     "        feeding_channel_width=80,\n",
     "        trench_spacing=2.1,\n",
     "        registration_marks=True,\n",
-    "        chip_id=0,\n",
+    "        chip_id=1,\n",
     "        mark_size=1,\n",
     "        mark_spacing=1,\n",
     "        tick_period=50,\n",
@@ -218,7 +218,7 @@
     "        lanes_per_snake=3,\n",
     "        trench_spacing=2.1,\n",
     "        registration_marks=True,\n",
-    "        chip_id=1,\n",
+    "        chip_id=2,\n",
     "        mark_size=1,\n",
     "        mark_spacing=1,\n",
     "        **manifold_params,\n",
@@ -234,7 +234,7 @@
     "        lanes_per_snake=5,\n",
     "        trench_spacing=2.1,\n",
     "        registration_marks=True,\n",
-    "        chip_id=1,\n",
+    "        chip_id=3,\n",
     "        mark_size=1,\n",
     "        mark_spacing=1,\n",
     "        **manifold_params,\n",
@@ -245,7 +245,7 @@
     "        ports=f\"S{p['split']}\"\n",
     "        if np.isscalar(p[\"split\"])\n",
     "        else \"S{} LS{}\".format(p[\"num_manifolds\"], p[\"lanes_per_snake\"]),\n",
-    "        reg=f\" M{p['mark_size']}\" if p[\"registration_marks\"] else \"\",\n",
+    "        reg=f\" M{p['mark_size']} ID{p['chip_id']}\" if p[\"registration_marks\"] else \"\",\n",
     "        **p,\n",
     "    )\n",
     "    for p in params\n",
@@ -254,14 +254,14 @@
     "wafer_manifest = \"\\n\".join([f\"{idx+1}) \" + name for idx, name in enumerate(chip_names)])\n",
     "main_cell = s.wafer(\n",
     "    chips,\n",
-    "    text_right=\"Basilisk \\n JQS/DE/YG 200226\",\n",
+    "    text_right=\"Basilisk \\n JQS/DE/YG 200226.3\",\n",
     "    text_left=wafer_manifest,\n",
     "    text=True,\n",
     "    mask=False,\n",
     "    chip_dims=chip_dims,\n",
     "    diameter=(4 * u.inch).to(u.um).magnitude,\n",
     ")\n",
-    "s.write_gds(main_cell, \"200226basilisk.gds\")"
+    "s.write_gds(main_cell, \"200226.3basilisk.gds\")"
    ]
   },
   {
@@ -335,7 +335,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print_fovs(fov_dims, metadata[\"Basilisk S8 FC80 L35 W1.4 TS2.1 M1\"])"
+    "print_fovs(fov_dims, metadata[\"Basilisk S8 FC80 L35 W1.4 TS2.1 M1 ID1\"])"
    ]
   },
   {
@@ -344,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print_fovs(fov_dims, metadata[\"Basilisk S1 LS3 FC40 L35 W1.4 TS2.1 M1\"])"
+    "print_fovs(fov_dims, metadata[\"Basilisk S1 LS3 FC40 L35 W1.4 TS2.1 M1 ID2\"])"
    ]
   },
   {
