--- a/paulssonlab/src/paulssonlab/shenker/cloning/Golden gate parts ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/Golden gate parts ingest.ipynb
@@ -10,8 +10,7 @@
     "import re\n",
     "import urllib\n",
     "import benchlingapi\n",
-    "import requests_html\n",
-    "from paulssonlab.api import *"
+    "import requests_html"
    ]
   },
   {
@@ -22,6 +21,15 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import paulssonlab.api as api"
    ]
   },
   {
@@ -69,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder = get_folder(session, project=\"Test\")"
+    "folder = api.get_folder(session, \"Test2\", project=\"Test\")"
    ]
   },
   {
@@ -79,6 +87,29 @@
    "outputs": [],
    "source": [
     "dna = session.DNASequence.find_by_name(\"V37m\", folder_id=folder.id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://www.addgene.org/108254/\"\n",
+    "# url = 'https://www.addgene.org/108537/'\n",
+    "# url = 'http://www.addgene.org/121010/'\n",
+    "api.get_addgene_info(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# url = 'https://www.addgene.org/kits/marionette-sensor-collection/#kit-contents'\n",
+    "url = \"http://www.addgene.org/kits/murray-cidar-moclo-v1/\"\n",
+    "kit = api.get_addgene_kit(url, include_info=False, include_sequences=False)"
    ]
   },
   {
